--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Generator</title>
+    <link rel="stylesheet" href="style.css">   
 </head>
 <body>
-    <script scr="script.js"></script>
+    <div class="container">
+        <p>Enter your text or URL</p>
+        <input id="qrText" type="text" placeholder="Text or URL">
+        <div id="imgBox">
+            <img src="" id="qrImage">
+        </div>
+        <button onclick='generateQR()'>Generate QR Code</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
